--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HiltMVVMComposeTutorial"
+        android:theme="@style/Theme.splashScreenTheme"
         tools:targetApi="31">
-        <activity
-            android:name=".ui.screens.mainscreen.MainScreen"
-            android:exported="false"
-            android:label="@string/title_activity_main_screen"
-            android:theme="@style/Theme.HiltMVVMComposeTutorial" />
         <activity
             android:name=".ui.screens.activity.MainActivity"
             android:exported="true"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.HiltMVVMComposeTutorial">
+            android:label="@string/app_title"
+            android:theme="@style/Theme.splashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
